--- a/martin-grid/index.html
+++ b/martin-grid/index.html
@@ -18,16 +18,16 @@
   <main>
     <div class='container2'
       <div class='image'>
-        <img src='https://via.placeholder.com/700x500' alt='placeholder where women's graphic t-shirts would be'>
+        <img src='https://via.placeholder.com/150x100' alt='placeholder where women's graphic t-shirts would be'>
       </div>
       <div class='image'>
-        <img src='https://via.placeholder.com/700x500' alt='placeholder where men's graphic t-shirts would be'>
+        <img src='https://via.placeholder.com/150x100' alt='placeholder where men's graphic t-shirts would be'>
       </div>
       <div class='image'>
-        <img src='https://via.placeholder.com/700x500' alt='placeholder where outdoor stuff would be'>
+        <img src='https://via.placeholder.com/150x100' alt='placeholder where outdoor stuff would be'>
       </div>
       <div class='image'>
-        img src='https://via.placeholder.com/700x500' alt='placeholder where cameras would be'>
+        <img src='https://via.placeholder.com/150x100' alt='placeholder where cameras would be'>
       </div>
     </div>
   </main>
